--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/sayyyho/BasicNode.js#readme",
   "dependencies": {
-    "figlet": "^1.5.2"
+    "express": "^4.18.1"
   }
 }
